navbar and sidebar added

--- a/src/components/button/css/index.css
+++ b/src/components/button/css/index.css
@@ -1,9 +1,9 @@
 .btnDesign{
     background-color: blue !important;
     color: white !important;
-    width: 100%;
-    border-radius: 20px;
-    height: 50px;
+    width: 100% !important;
+    border-radius: 20px !important;
+    height: 50px !important;
 }
 
 .btnDesign:focus{
