collection screen created

--- a/src/theme/theme.css
+++ b/src/theme/theme.css
@@ -24,6 +24,10 @@
     color: #b0b0b0 !important;
 }
 
+.light-grey2 {
+    color: #CCCCCC !important;
+}
+
 .red {
     color: #D54343 !important;
 }
