--- a/src/containers/Collections/css/index.css
+++ b/src/containers/Collections/css/index.css
@@ -15,10 +15,20 @@
     margin-left: 50px;
 }
 
-.searchStyle{
-    background-color: black !important;
-    color: black !important ;
-    height: 50px!important;
+.searchStyle {
+    border-radius: 20px !important;
+    background-color: #2b2b2b !important;
+    color: #666666 !important;
+    border: none !important;
+    padding-left: 15px !important;
+}
+
+.searchStyle::placeholder {
+    color: #666666 !important;
+}
+
+.searchStyle:focus {
+    box-shadow: none !important;
 }
 
 @media only screen and (max-width: 600px) {
@@ -45,14 +55,14 @@
         margin-left: 0px;
     }
 
-    .uploadView{
+    .uploadView {
         justify-content: center;
         margin-bottom: 50px;
         padding-left: 50px;
         padding-right: 50px;
     }
 
-    .uploadView1{
+    .uploadView1 {
         width: 100%;
     }
 }
