--- a/src/theme/theme.css
+++ b/src/theme/theme.css
@@ -2,6 +2,10 @@
     background-image: linear-gradient(#f45c5c, #7e1c1c) !important;
 }
 
+.green-gradient {
+    background-image: linear-gradient(#1AAE17, #46AC43) !important;
+}
+
 .red-gradient-color {
     background: -webkit-linear-gradient(#f45c5c, #7e1c1c);
     -webkit-background-clip: text;
@@ -52,6 +56,6 @@
     color: #73ADE3 !important;
 }
 
-.light-green{
+.light-green {
     color: #74F086 !important;
 }
