--- a/src/theme/theme.css
+++ b/src/theme/theme.css
@@ -6,6 +6,10 @@
     background-image: linear-gradient(#1AAE17, #46AC43) !important;
 }
 
+.pink-gradient {
+    background-image: linear-gradient(#FF99B1, #FFBACB) !important;
+}
+
 .red-gradient-color {
     background: -webkit-linear-gradient(#f45c5c, #7e1c1c);
     -webkit-background-clip: text;
