--- a/src/containers/Payment/css/index.css
+++ b/src/containers/Payment/css/index.css
@@ -1,12 +1,35 @@
+.metamaskBtn{
+    height: 50px !important;
+    border-radius: 20px !important;
+    border: none !important;
+    color: black !important;
+    min-Width: 40%;
+}
+
+.cardContent{
+    flex-direction: column;
+    align-items: center;
+    margin-top: -80px;
+}
+
+.paymentCards{
+    width: 100%;
+}
+
+.tapStyle{
+    margin: 15px;
+}
+
 @media only screen and (max-width: 600px) {
     .paymentCardsView{
         flex-direction: column;
-        width: 100%;
     }
 
     .paymentCards{
-        width: 90% !important;
-        /* margin-top: 30px; */
-        height: 180px !important;
+        width: auto;
+    }
+
+    .tapStyle{
+        margin: 5px;
     }
 }
