light theme setup

--- a/src/containers/Collections/css/index.css
+++ b/src/containers/Collections/css/index.css
@@ -17,7 +17,7 @@
 
 .searchStyle {
     border-radius: 20px !important;
-    background-color: #2b2b2b !important;
+    /* background-color: #2b2b2b !important; */
     color: #666666 !important;
     border: none !important;
     padding-left: 15px !important;
