--- a/src/components/navbar/css/index.css
+++ b/src/components/navbar/css/index.css
@@ -1,10 +1,29 @@
 .navbarBgColor {
     background-color: #000000 !important;
 }
-.logoView{
+
+.logoView {
     background-color: #CCCCCC;
     width: 42px;
     height: 42px;
     border-radius: 50px;
     align-items: center;
+}
+
+.menuBarWebView {
+    display: block;
+}
+
+.menuBarMobView {
+    display: none;
+}
+
+@media only screen and (max-width: 600px) {
+    .menuBarWebView {
+        display: none;
+    }
+
+    .menuBarMobView {
+        display: block;
+    }
 }
