--- a/src/theme/theme.css
+++ b/src/theme/theme.css
@@ -62,6 +62,10 @@
     color: #4BDE97 !important;
 }
 
+.red-border{
+    border: 1px solid #F26464 !important;
+}
+
 .grey-border {
     border: 1px solid #DFE0EB !important;
 }
@@ -76,6 +80,18 @@
 
 .grey-border-top {
     border-top: 1px solid #313148 !important;
+}
+
+.bg-grey2 {
+    background-color: #F6F2F2 !important;
+}
+
+.bg-grey3 {
+    background-color: #EFEBEB !important;
+}
+
+.bg-grey4 {
+    background-color: #FDFAFA !important;
 }
 
 .white {
