--- a/src/theme/theme.css
+++ b/src/theme/theme.css
@@ -34,6 +34,10 @@
     background-color: #428DFF !important;
 }
 
+.bg-light-blue {
+    background-color: #DAF2FD !important;
+}
+
 .red {
     color: #b32f2f !important;
 }
@@ -62,7 +66,7 @@
     color: #4BDE97 !important;
 }
 
-.red-border{
+.red-border {
     border: 1px solid #F26464 !important;
 }
 
@@ -82,6 +86,14 @@
     border-top: 1px solid #313148 !important;
 }
 
+.green-border {
+    border: 1px solid #79C62D !important;
+}
+
+.green2 {
+    color: #79C62D !important;
+}
+
 .bg-grey2 {
     background-color: #F6F2F2 !important;
 }
@@ -92,6 +104,10 @@
 
 .bg-grey4 {
     background-color: #FDFAFA !important;
+}
+
+.bg-green{
+    background-color: #3BB447 !important;
 }
 
 .white {
@@ -108,6 +124,10 @@
 
 .purple {
     color: #4B506D !important;
+}
+
+.purple2 {
+    color: #24327C !important;
 }
 
 .black {
@@ -140,4 +160,12 @@
 
 .regular {
     font-weight: 400 !important;
+}
+
+.blue-gradient {
+    background-image: linear-gradient(#009CDA, #00FF85) !important;
+}
+
+.orange-gradient {
+    background-image: linear-gradient(#F18724, #FA09FF) !important;
 }
