--- a/src/components/card/css/index.css
+++ b/src/components/card/css/index.css
@@ -2,7 +2,8 @@
     width: 240px;
     background-color: #191919 !important;
     border: none !important;
-    border-radius: 20px !important;
+    border-radius: 10px !important;
+    overflow: hidden !important;
 }
 
 .thumbView {
