--- a/src/theme/theme.css
+++ b/src/theme/theme.css
@@ -35,7 +35,7 @@
 }
 
 .bg-orange {
-    background-color:#E33922 !important;
+    background-color: #E33922 !important;
 }
 
 .bg-light-blue {
@@ -54,6 +54,10 @@
     color: #F26464 !important;
 }
 
+.red3 {
+    color: #CC2323 !important;
+}
+
 .bg-red2 {
     background-color: #F26464 !important;
 }
@@ -66,12 +70,20 @@
     color: #B9B9B9 !important;
 }
 
+.light-grey2 {
+    color: #777777 !important;
+}
+
 .green {
     color: #4BDE97 !important;
 }
 
 .red-border {
     border: 1px solid #F26464 !important;
+}
+
+.red-border-bottom {
+    border-bottom: 1px solid #F26464 !important;
 }
 
 .grey-border {
