--- a/src/containers/DataSection/css/index.css
+++ b/src/containers/DataSection/css/index.css
@@ -1,6 +1,13 @@
-.uploadBtn{
+.uploadBtn {
     border: 2px solid #161624;
     height: 180px;
     width: 180px;
     border-radius: 90px;
+}
+
+@media only screen and (max-width: 600px) {
+    .sectionMobView {
+        display: flex;
+        flex-direction: column-reverse;
+    }
 }
