--- a/src/containers/Payment/css/index.css
+++ b/src/containers/Payment/css/index.css
@@ -2,3 +2,16 @@
     -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, .2);
     box-shadow: 0 0 10px rgba(0, 0, 0, .2);
 }
+
+@media only screen and (max-width: 600px) {
+    .paymentMethodCard{
+        flex-direction: column;
+    }
+    .paymentMethodCardContent{
+        display: flex;
+        justify-content: space-between;
+    }
+    .withdrawRequest{
+        margin-top: 20px;
+    }
+}
