--- a/src/containers/UserProfile/css/index.css
+++ b/src/containers/UserProfile/css/index.css
@@ -12,27 +12,36 @@
     align-items: center;
 }
 
+.optionsView{
+    display: flex;
+}
+
 @media only screen and (max-width: 600px) {
     .profileImageContainer {
         flex-wrap: wrap;
         justify-content: center;
     }
 
-    .collectionImage {
-        margin-top: 50px;
-        margin-bottom: 25px;
-    }
-
     .userNameView {
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin-bottom: 50px;
+        margin-bottom: 20px;
         margin-left: 0px;
     }
 
-    .profileDetailsMobView {
-        display: flex;
-        justify-content: center;
+    .profileInformationBorder{
+        display: none;
+    }
+
+    .profileInformationView{
+        justify-content: space-between;
+    }
+    .optionsView{
+        flex-direction: column;
+        align-items: flex-end;
+    }
+    .profileContainer{
+        flex-direction: column;
     }
 }
