--- a/src/containers/PreviousNotes/css/index.css
+++ b/src/containers/PreviousNotes/css/index.css
@@ -22,3 +22,18 @@
     border: 1px solid #A82929 !important;
     border-radius: 10px !important;
 }
+
+.notesView{
+    justify-content: space-between;
+}
+
+@media only screen and (max-width: 600px) {
+    .notesView{
+        flex-direction: column;
+        margin-top: 15px !important;
+        margin-bottom: 15px !important;
+    }
+    .addNotes{
+        margin-top: 15px;
+    }
+}
