change cover photo

--- a/src/containers/Dashboard/css/index.css
+++ b/src/containers/Dashboard/css/index.css
@@ -1,5 +1,5 @@
 .dashboardCover {
-    background-image: url("../../../assets/images/dashboard_cover.png");
+    background-image: url("../../../assets/images/dashboard_cover.jpg");
     object-fit: cover;
     border-bottom-left-radius: 100px;
     border-bottom-right-radius: 100px;
