dashboard updated and major issues fixes

--- a/src/components/menu/css/index.css
+++ b/src/components/menu/css/index.css
@@ -2,5 +2,27 @@
     background-color: rgba(0, 0, 0, .8) !important;
     border-top-right-radius: 40px;
     box-shadow: none;
-    min-height: 100vh;
+    /* min-height: 100vh; */
+}
+
+.ant-menu-dark.ant-menu-dark:not(.ant-menu-horizontal) .ant-menu-item-selected{
+    background-color: rgb(167, 161, 161) !important;
+}
+
+.ant-menu-submenu .ant-menu-sub{
+    background-color: rgba(0, 0, 0, .8) !important;
+}
+
+/* .ant-menu-submenu > .ant-menu {
+    overflow: auto;
+  } */
+
+  /* .ant-layout-sider-children {
+    height: 100%;
+    overflow: auto;
+  } */
+
+  .ant-dropdown-menu {
+    max-height: 250px;
+    overflow: auto;
 }
