--- a/src/components/card/css/index.css
+++ b/src/components/card/css/index.css
@@ -13,11 +13,17 @@
     align-items: center;
 }
 
-.collectionBtn{
+.collectionBtn {
     border: 1px solid #D54343 !important;
     background-color: transparent !important;
     color: #CCCCCC !important;
     width: 100% !important;
     height: 40px !important;
     border-radius: 10px !important;
+}
+
+@media only screen and (max-width: 600px) {
+    .cardContainer {
+        width: auto;
+    }
 }
