--- a/src/components/navbar/css/index.css
+++ b/src/components/navbar/css/index.css
@@ -2,6 +2,16 @@
     background-color: #000000 !important;
 }
 
+.dashboardNavBgColor {
+    background-color: #1f1111 !important;
+    color: white !important;
+}
+
+/* 
+.dashboardNavBgColor {
+    background-color: yellow !important;
+} */
+
 .logoView {
     background-color: #CCCCCC;
     width: 42px;
@@ -18,12 +28,20 @@
     display: none;
 }
 
-.loginBtn{
-    border: none !important;
+.walletBtn {
+    border: 1px solid #C13636;
+    width: 150px;
+    height: 35px;
+    border-radius: 20px;
 }
 
-.loginBtn:focus{
-    border: none !important;
+.navbar-light .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
+}
+
+.navbar-light .navbar-toggler{
+    color: rgba(255,255,255,.55) !important;
+    border-color: rgba(255,255,255,.1) !important;
 }
 
 @media only screen and (max-width: 600px) {
