--- a/src/containers/Login/css/index.css
+++ b/src/containers/Login/css/index.css
@@ -14,6 +14,8 @@
     width: 100%;
     border-radius: 20px;
     padding: 40px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 @media only screen and (max-width: 1000px) {
