--- a/src/containers/Collections/css/index.css
+++ b/src/containers/Collections/css/index.css
@@ -33,8 +33,8 @@
 .tabsWrapper {
   display: flex;
   justify-content: space-between;
-  flex-direction: column;
-  align-items: center;
+  /* flex-direction: column;
+  align-items: center; */
 }
 
 .ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn {
