--- a/src/containers/Collections/css/index.css
+++ b/src/containers/Collections/css/index.css
@@ -32,9 +32,9 @@
 
 .tabsWrapper {
   display: flex;
-  justify-content: space-between;
-  /* flex-direction: column;
-  align-items: center; */
+  /* justify-content: space-between; */
+  flex-direction: column;
+  /* align-items: center; */
 }
 
 .ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn {
