wallet connect integration update

--- a/src/containers/Login/css/index.css
+++ b/src/containers/Login/css/index.css
@@ -2,28 +2,44 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.logoSize {
+  }
+  
+  .logoSize {
     height: 250px;
     width: 250px;
-}
-
-.formContainer{
+  }
+  
+  .formContainer {
     background-color: white;
     width: 100%;
     border-radius: 20px;
     padding: 40px;
     margin-left: 10px;
     margin-right: 10px;
-}
-
-@media only screen and (max-width: 1000px) {
-    .formMobView{
-        flex-wrap: wrap;
+  }
+  
+  .formContainer input {
+    border: none !important;
+    border-bottom: 2px solid #dcdcdc !important;
+    padding-bottom: 15px !important;
+    padding-top: 15px !important;
+    text-align: center;
+    color: #b0b0b0 !important;
+    font-weight: 400 !important;
+    width: 100%;
+  }
+  
+  .formContainer input::placeholder {
+    color: #b0b0b0 !important;
+  }
+  
+  @media only screen and (max-width: 1000px) {
+    .formMobView {
+      flex-wrap: wrap;
     }
-    .formContainer{
-        margin: 0px !important;
-        margin-bottom: 20px !important;
+    .formContainer {
+      margin: 0px !important;
+      margin-bottom: 20px !important;
     }
-}
+  }
+  
