Home and MintNFT Design Updates
- Add Notification Modal with static data
- Change Header Color
- Remove Purple Border from Footer
- Remove term & condition checkbox from sign IN section.
- Remove category dropdown from video gallery filter.
- Add category dropdown in create NFT section with static values.
- Add Split Ownership create earning modal.
- Add Collection button on Mint NFT page.
- Add Watch and Liked icon with static Counts.

--- a/src/components/navbar/css/index.css
+++ b/src/components/navbar/css/index.css
@@ -3,7 +3,7 @@
 }
 
 .dashboardNavBgColor {
-  background-color: #1f1111 !important;
+  background-color: #000000 !important;
   color: white !important;
 }
 
