--- a/src/components/card/css/index.css
+++ b/src/components/card/css/index.css
@@ -99,3 +99,19 @@
   align-items: center;
   width: 100%;
 }
+
+.video-overlay {
+  position: absolute;
+  top: 10;
+  left: 10;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.8); /* Adjust the background color and opacity as needed */
+  color: #000; /* Adjust the text color as needed */
+  font-size: 8px;
+}
