privacy policy, reset password page design

--- a/src/containers/Login/css/index.css
+++ b/src/containers/Login/css/index.css
@@ -43,3 +43,7 @@
     }
   }
   
+
+  .ant-select-single.ant-select-show-arrow .ant-select-selection-item, .ant-select-single.ant-select-show-arrow .ant-select-selection-placeholder {
+    color: #000000;
+  }
