--- a/src/containers/Dashboard/css/index.css
+++ b/src/containers/Dashboard/css/index.css
@@ -165,3 +165,42 @@
         margin-left: 0rem;
     }
 }
+
+
+
+.chart-container {
+  width: 966px;
+  height: 483px;
+  background: rgb(34, 34, 53);
+  border-radius: 20px;
+  margin-top: 10px;
+  position: relative;
+  overflow: hidden;
+}
+
+/* Shimmer effect */
+.chart-container::before {
+  content: "";
+  position: absolute;
+  top: -300px;
+  left: -150px;
+  height: 300%;
+  width: 300px;
+  transform: rotate(45deg);
+  background: linear-gradient(
+    to right,
+    rgba(34, 34, 53, 0) 0%,
+    rgba(255, 255, 255, 0.1) 50%,
+    rgba(34, 34, 53, 0) 100%
+  );
+  animation: shimmer 1.5s infinite;
+}
+
+@keyframes shimmer {
+  0% {
+    transform: translateX(-150px);
+  }
+  100% {
+    transform: translateX(100%);
+  }
+}
